gts-macros/tests/v2_compile_fail/missing_schema_id.stderr
error: GtsSchema: missing required attribute 'schema_id' in #[gts(...)]
 --> tests/v2_compile_fail/missing_schema_id.rs:7:12
  |
7 | pub struct UserV1 {
  |            ^^^^^^
